# my_finpulse

./: .gitignore  README.md  docker-compose.yml  env.example  pyproject.toml
app/: celery_app.py  db.py  main.py  settings.py  tasks.py
app/data_fetcher/: __init__.py  base_fetcher.py  calculate_rps.py  financial_fetcher.py  index_fetcher.py  moneyflow_fetcher.py  sector_fetcher.py  stock_fetcher.py
